Fix tap sizes for featured art, clean up extra space

--- a/src/_includes/css/style.css
+++ b/src/_includes/css/style.css
@@ -629,7 +629,7 @@ main {
 }
 
 .featured-art .feat-art-list li a {
-    padding: 1rem 0 0 0;
+    padding: 2rem 0 0 0;
 }
 
 .featured-art .feat-art-list li a img {
